# Drone-on-Drone-Interception-Using-Edge-Path-Planning

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  README.md
mtrl_trainer/: AgiSimBatch.hpp  AgiSimBatch2 copy 2.cpp  AgiSimBatch2.cpp  AgiSimBatch2_original.cpp  AgiSimBatchTerminal.cpp  AgiSimBatch_original.hpp  CMakeLists.txt  ITask.hpp  TFliteConverter.py  TaskInterception.cpp  TaskInterception.hpp  TaskInterceptionMoving copy.cpp  TaskInterceptionMoving copy.hpp  TaskInterceptionMoving.cpp  TaskInterceptionMoving.hpp  TaskRacing.cpp  TaskRacing.hpp  TaskStabilization.cpp  TaskStabilization.hpp  TaskTerminalPursuit.cpp  TaskTerminalPursuit.hpp  bindings.cpp  convert_savedmodel_to_tflite.py  debug_intercept_rollout.py  gate_generator.py  interception_eval_gif.py  interception_eval_stats (copy).py  interception_eval_stats.py  interception_gif.py  interception_performance_map.py  interception_stratified_eval.py  interception_target_wrapper.py  interception_visualizer.py  interception_visualizer_moving.py  race_analyser.py  reset_tester.py  stabilization_visualizer.py  state_drift_tester.py  target_motion.py  tfa_environment.txt  (+10 more)
mtrl_trainer/best_intercept_closest/: AgiSimBatch2.cpp  TaskInterceptionMoving.cpp  TaskInterceptionMoving.hpp  interception_visualizer_moving.py  reward_params.yaml
mtrl_trainer/best_intercept_closest/best_intercept/: fingerprint.pb
mtrl_trainer/best_intercept_closest/best_intercept/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/best_intercept_getting_there/: AgiSimBatch.hpp  AgiSimBatch2.cpp  ITask.cpp  TaskInterceptionMoving.cpp  TaskInterceptionMoving.hpp
mtrl_trainer/checkpoints_intercept/: checkpoint  ckpt-32360.data-00000-of-00001  ckpt-32360.index  ckpt-32410.data-00000-of-00001  ckpt-32410.index  ckpt-32460.data-00000-of-00001  ckpt-32460.index  ckpt-32510.data-00000-of-00001  ckpt-32510.index  ckpt-32560.data-00000-of-00001  ckpt-32560.index
mtrl_trainer/jan5/: TaskInterceptionMoving.cpp  TaskInterceptionMoving.hpp  train_intercept_greedy.py  train_intercept_greedy_con.py
mtrl_trainer/log/: latest_build
mtrl_trainer/mtrl_lib/: agisim_environment.py  agisim_environment_terminal.py  gate_utils.py  obervation_encoders.py
mtrl_trainer/parameters/: reward_params.yaml  reward_params_original.yaml  simulation.yaml  track.json  track_original.json  track_point.json
mtrl_trainer/perf_maps/: episodes.csv  run_meta.json  summary.txt
mtrl_trainer/policies_intercept/best_intercept copy/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept copy/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept-predict/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept-predict/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept2/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept2/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept3/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept3/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept4/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept4/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept5/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept5/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept_10msTarget/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept_10msTarget/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept_10msTarget_copy/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept_10msTarget_copy/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept_1850_goldstandard_slow_target_jan17/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept_1850_goldstandard_slow_target_jan17/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept_1850it_orbs/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept_1850it_orbs/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/policies_intercept/best_intercept_850_96%/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_intercept_850_96%/variables/: variables.data-00000-of-00001  (+1 more)
mtrl_trainer/policies_intercept/best_intercept_closest/: fingerprint.pb
mtrl_trainer/policies_intercept/best_intercept_no_orbs_1850it/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_terminal/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_terminal_intercept/: fingerprint.pb  saved_model.pb
mtrl_trainer/policies_intercept/best_terminal_intercept2/: fingerprint.pb  saved_model.pb
mtrl_trainer/ppo_policy_15_sec_horizon/: fingerprint.pb  policy_specs.pbtxt  saved_model.pb
mtrl_trainer/ppo_policy_15_sec_horizon/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/ppo_policy_906_0.5delay/: fingerprint.pb  saved_model.pb
mtrl_trainer/ppo_policy_906_0.5delay/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/ppo_policy_mtrl/: fingerprint.pb  saved_model.pb
mtrl_trainer/ppo_policy_mtrl/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/ppo_policy_single_racing/: fingerprint.pb  policy_specs.pbtxt  saved_model.pb
mtrl_trainer/ppo_policy_single_racing/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/ppo_policy_single_task_racing/: fingerprint.pb  saved_model.pb
mtrl_trainer/ppo_policy_single_task_racing/variables/: variables.data-00000-of-00001  variables.index
mtrl_trainer/stratified_eval/: run_meta.json
(+43 files in other folders)
